--- a/task-manager-backend/src/env.example
+++ b/task-manager-backend/src/env.example
@@ -1,6 +1,8 @@
-AWS_ACCESS_KEY_ID=your_key
-AWS_SECRET_ACCESS_KEY=your_secre_key
-DB_HOST=your_db
-DB_USER=your_user
+DB_HOST=your_host
+DB_PORT=your_port
+DB_USERNAME=your_user
 DB_PASSWORD=your_password
-DB_DATABASE=your_db
+DB_NAME=your_db_name
+DB_MAX_CONNECTIONS=your_connections
+DB_IDLE_TIMEOUT=your_idle_timeout
+DB_CONNECTION_TIMEOUT=your_connection_timeout
